--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import '@styles/global.css'
+import { Aside } from '@components/aside'
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,18 +10,12 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>ChatBot</title>
   </head>
   <body>
-    <slot />
+    <div id="app" class="bg-[#EEEEEE]">
+      <Aside />
+      <slot />
+    </div>
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
