Enhance index page: wrap Chat component within Layout for improved structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
+import { Chat } from '@components/chat'
 import Layout from '@layouts/Layout.astro'
 ---
 
-<Layout />
+<Layout>
+  <Chat client:visible/>
+</Layout>
